--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,6 +30,10 @@ h1 {
   overflow: hidden;
 }
 
+.column ul {
+  height: 100%;
+}
+
 li {
   margin: 1px;
   padding: 4px;
@@ -39,4 +43,15 @@ li {
 
 small {
   font-weight: bold;
+}
+
+.container {
+  height: 100%;
+
+  -webkit-transition: -webkit-transform 0.2s ease-out;
+  -webkit-transform: translateY(0);
+  -moz-transition: -moz-transform 0.2s ease-out;
+  -moz-transform: translateY(0);
+  transition: transform 0.2s ease-out;
+  transform: translateZ(0);
 }
