Add total stories and points to column headers

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,13 +4,17 @@ html, body {
   overflow: hidden;
 }
 
-h1 {
+header {
   padding: 5px;
 
   background-color: #333;
   color: #fff;
 
   text-transform: capitalize;
+}
+
+h1 {
+  display: inline;
 }
 
 .tasks {
