--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,22 +1,78 @@
 html, body {
   height: 100%;
-  
+
   overflow: hidden;
 }
 
+body {
+  background-color: #9F9FA0;
+  color: #404041;
+}
+
+li {
+  padding: 10px;
+  border-bottom: 1px solid #231F20;
+  background-color: #fff;
+  background-image: -webkit-linear-gradient(#fff 70%, #ddddde 100%);
+
+  text-shadow: 0 1px #fff;
+}
+
+/* Content wrapper */
+.container {
+  height: 100%;
+
+  -webkit-transition: -webkit-transform 0.2s ease-out;
+  -webkit-transform: translateY(0);
+  -moz-transition: -moz-transform 0.2s ease-out;
+  -moz-transform: translateY(0);
+  transition: transform 0.2s ease-out;
+  transform: translateZ(0);
+}
+
+/* Settings form */
+.settings-form {
+  padding: 10px;
+  background-color: #fff;
+
+  border-bottom: 1px solid #231F20;
+}
+
+/* Column headers */
 header {
-  padding: 5px;
+  position: relative;
+  z-index: 2;
+  display: -webkit-flex;
+  display: flex;
+  padding: 16px 10px 19px;
 
-  background-color: #333;
+  background-color: #7D1D80;
   color: #fff;
+  border-bottom: 1px solid #231F20;
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0.3) 0%, rgba(0,0,0,0) 10%);
 
+  box-shadow: inset 0 -5px #fff, inset -1px 0 #fff, 0 2px 10px rgba(0,0,0,0.4);
   text-transform: capitalize;
+  text-shadow: 0 -1px rgba(0,0,0,0.8);
+}
+
+.summary {
+  -webkit-flex: 1;
+  flex: 1;
+  white-space: nowrap;
+  text-align: right;
 }
 
 h1 {
-  display: inline;
+  -webkit-flex: 1;
+  flex: 1;
+  display: inline-block;
+
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
+/* Story columns */
 .tasks {
   display: -webkit-flex;
   display: flex;
@@ -29,33 +85,72 @@ h1 {
   height: 100%;
   box-sizing: border-box;
 
-  border: 1px solid red;
+  border-right: 1px solid #231F20;
 
   overflow: hidden;
+  box-shadow: inset 1px 0 0 #fff;
+}
+
+.column:last-child {
+  border-right: none;
 }
 
 .column ul {
   height: 100%;
 }
 
-li {
-  margin: 1px;
-  padding: 4px;
+/* Story card */
+.column li {
+  position:relative;
+  padding-left: 16px;
+  padding-right: 30px;
+}
 
-  border: 1px solid blue;
+.column li:before {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 5px;
+  height: 100%;
+
+  background-color: #FFE90A;
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0) 70%, rgba(0,0,0,0.15) 100%);
+
+  content: '';
+}
+
+.column li:after {
+  display: block;
+  position: absolute;
+  z-index: 2;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 20px;
+
+  background-image: -webkit-radial-gradient(50% -20px, closest-corner, #000 0%, transparent 100%);
+
+  content: '';
+}
+
+.column .bug:before {
+  background-color: #D8002D;
+}
+
+.column .chore:before {
+  background-color: #ddd;
 }
 
 small {
   font-weight: bold;
+  color: #7D1D80;
 }
 
-.container {
-  height: 100%;
+.estimate {
+  position: absolute;
+  top: 9px;
+  right: 10px;
 
-  -webkit-transition: -webkit-transform 0.2s ease-out;
-  -webkit-transform: translateY(0);
-  -moz-transition: -moz-transform 0.2s ease-out;
-  -moz-transform: translateY(0);
-  transition: transform 0.2s ease-out;
-  transform: translateZ(0);
+  font-weight: bold;
 }
