--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -1,3 +1,7 @@
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.2;
+
+  -webkit-font-smoothing: antialiased;
 }
