--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,7 +44,7 @@ header {
   z-index: 2;
   display: -webkit-flex;
   display: flex;
-  padding: 16px 10px 19px;
+  padding: 16px 10px 19px 16px;
 
   background-color: #7D1D80;
   color: #fff;
@@ -52,7 +52,6 @@ header {
   background-image: -webkit-linear-gradient(rgba(0,0,0,0.3) 0%, rgba(0,0,0,0) 10%);
 
   box-shadow: inset 0 -5px #fff, inset -1px 0 #fff, 0 2px 10px rgba(0,0,0,0.4);
-  text-transform: capitalize;
   text-shadow: 0 -1px rgba(0,0,0,0.8);
 }
 
@@ -139,7 +138,7 @@ h1 {
 }
 
 .column .chore:before {
-  background-color: #ddd;
+  background-color: #aaa;
 }
 
 small {
@@ -153,4 +152,17 @@ small {
   right: 10px;
 
   font-weight: bold;
+}
+
+/* Footer */
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 16px;
+
+  background-color: #F2F2F2;
+  box-shadow: 0 -5px 5px rgba(0,0,0,0.15);
+  text-shadow: 0 1px #fff;
 }
