Match burn down line colours to design

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -287,8 +287,8 @@ small {
   stroke-width: 5px;
 }
 .actual.line {
-  stroke: steelblue;
+  stroke: #bfdda0;
 }
 .ideal.line {
-  stroke: salmon;
+  stroke: #ed8d96;
 }
