--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@ li {
   padding: 10px;
   border-bottom: 1px solid #231F20;
   background-color: #fff;
-  background-image: -webkit-linear-gradient(#fff 70%, #ddddde 100%);
+  background-image: -webkit-linear-gradient(#fff 70%, #eee 100%);
 
   text-shadow: 0 1px #fff;
 }
@@ -38,11 +38,24 @@ li {
   border-bottom: 1px solid #231F20;
 }
 
+.account-settings span {
+  display: inline-block;
+  width: 300px;
+}
+
+.account-settings input[type=text] {
+  width: 320px;
+}
+
 .actions {
-  padding: 10px;
+  padding: 10px 10px 10px 310px;
   background-color: #efefef;
   border-bottom: 1px solid #231F20;
   box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+}
+
+label {
+  cursor: pointer;
 }
 
 button {
@@ -65,13 +78,28 @@ button {
   text-transform: uppercase;
   text-shadow: 0 -1px #000;
   box-shadow: 0 2px 3px rgba(0,0,0,0.2),
-      inset 0 -1px 0 rgba(255,255,255,0.6),
-      inset 0 1px #000;
+      inset 0 -1px 1px rgba(255,255,255,0.8),
+      inset 0 1px 1px #000;
   cursor: pointer;
 }
 
 button:active {
   background-image: -webkit-linear-gradient(rgba(0,0,0,0.5) 0, rgba(0,0,0,0) 50%);
+}
+
+input[type=text] {
+  font-size: 16px;
+  border-radius: 2px;
+  padding: 4px;
+  
+  border-width: 1px;
+  border-style: solid;
+  border-color: #aaa #bbb #bbb;
+
+  background-color: #fff;
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.05) 25%);
+
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.05), inset 0 0 1px 1px #fff;
 }
 
 /* Project list */
@@ -161,6 +189,8 @@ h1 {
   padding-left: 16px;
   padding-right: 30px;
   min-height: 35px;
+
+  background-image: -webkit-linear-gradient(#fff 70%, #ddd 100%);
 }
 
 .column li:before {
